; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/target/extr_target_core_alua.c___core_alua_attach_tg_pt_gp_mem.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/target/extr_target_core_alua.c___core_alua_attach_tg_pt_gp_mem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.t10_alua_tg_pt_gp_member = type { i32, i32, %struct.t10_alua_tg_pt_gp* }
%struct.t10_alua_tg_pt_gp = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__core_alua_attach_tg_pt_gp_mem(%struct.t10_alua_tg_pt_gp_member* %0, %struct.t10_alua_tg_pt_gp* %1) #0 {
  %3 = alloca %struct.t10_alua_tg_pt_gp_member*, align 8
  %4 = alloca %struct.t10_alua_tg_pt_gp*, align 8
  store %struct.t10_alua_tg_pt_gp_member* %0, %struct.t10_alua_tg_pt_gp_member** %3, align 8
  store %struct.t10_alua_tg_pt_gp* %1, %struct.t10_alua_tg_pt_gp** %4, align 8
  %5 = load %struct.t10_alua_tg_pt_gp*, %struct.t10_alua_tg_pt_gp** %4, align 8
  %6 = getelementptr inbounds %struct.t10_alua_tg_pt_gp, %struct.t10_alua_tg_pt_gp* %5, i32 0, i32 0
  %7 = call i32 @spin_lock(i32* %6)
  %8 = load %struct.t10_alua_tg_pt_gp*, %struct.t10_alua_tg_pt_gp** %4, align 8
  %9 = load %struct.t10_alua_tg_pt_gp_member*, %struct.t10_alua_tg_pt_gp_member** %3, align 8
  %10 = getelementptr inbounds %struct.t10_alua_tg_pt_gp_member, %struct.t10_alua_tg_pt_gp_member* %9, i32 0, i32 2
  store %struct.t10_alua_tg_pt_gp* %8, %struct.t10_alua_tg_pt_gp** %10, align 8
  %11 = load %struct.t10_alua_tg_pt_gp_member*, %struct.t10_alua_tg_pt_gp_member** %3, align 8
  %12 = getelementptr inbounds %struct.t10_alua_tg_pt_gp_member, %struct.t10_alua_tg_pt_gp_member* %11, i32 0, i32 0
  store i32 1, i32* %12, align 8
  %13 = load %struct.t10_alua_tg_pt_gp_member*, %struct.t10_alua_tg_pt_gp_member** %3, align 8
  %14 = getelementptr inbounds %struct.t10_alua_tg_pt_gp_member, %struct.t10_alua_tg_pt_gp_member* %13, i32 0, i32 1
  %15 = load %struct.t10_alua_tg_pt_gp*, %struct.t10_alua_tg_pt_gp** %4, align 8
  %16 = getelementptr inbounds %struct.t10_alua_tg_pt_gp, %struct.t10_alua_tg_pt_gp* %15, i32 0, i32 2
  %17 = call i32 @list_add_tail(i32* %14, i32* %16)
  %18 = load %struct.t10_alua_tg_pt_gp*, %struct.t10_alua_tg_pt_gp** %4, align 8
  %19 = getelementptr inbounds %struct.t10_alua_tg_pt_gp, %struct.t10_alua_tg_pt_gp* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %19, align 4
  %22 = load %struct.t10_alua_tg_pt_gp*, %struct.t10_alua_tg_pt_gp** %4, align 8
  %23 = getelementptr inbounds %struct.t10_alua_tg_pt_gp, %struct.t10_alua_tg_pt_gp* %22, i32 0, i32 0
  %24 = call i32 @spin_unlock(i32* %23)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
